# poker-ia

./: .gitignore  ADVICE_HISTORY.md  ARCHITECTURE.md  CARD_SELECTOR.md  DEVPOST_SUBMISSION_DRAFT.md  Dockerfile  HACKATHON_EXTENSION.md  LICENSE  LIMITATIONS.md  Lancer Poker IA.bat  OPPONENT_MODEL.md  PERFORMANCE.md  POKER_RULES.md  README.md  SHOWDOWN_ENGINE.md  STRATEGY_ENGINE.md  TEST_REPORT.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  api.py  main.py  models.py  presentation.py
backend/app/engine/: __init__.py  cards.py  evaluator.py  holdem.py  pokerkit_adapter.py  pots.py  session.py
backend/app/opponents/: __init__.py  model.py
backend/app/persistence/: __init__.py  database.py  queue.py
backend/app/strategy/: __init__.py  advisor.py  equity.py  local_solver.py  preflop.py
backend/tests/: conftest.py  test_api_contract.py  test_engine_rules.py  test_evaluator.py  test_local_solver.py  test_opponents.py  test_persistence.py  test_restart_replace.py  test_session_lifecycle.py  test_showdown_pots.py  test_strategy.py
desktop/: launcher.py
frontend/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/e2e/: poker-ia.spec.ts
frontend/src/: App.tsx  api.ts  store.ts  styles.css  types.ts  utils.ts
scripts/: Installer-Poker-IA.ps1  Lancer-Poker-IA.ps1  Mesurer-Performances.py  Test-Complet.ps1  lancer-poker-ia.sh  runtime.ps1  test-complet.sh
(+20 files in other folders)
